added requirements.txt in scripts package.json

--- a/package.json
+++ b/package.json
@@ -98,7 +98,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "buildCommand": "pip install -r requirements.txt"
   },
   "author": "Sumant",
   "license": "ISC"
